--- a/pf2.css
+++ b/pf2.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400,500');
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+
 body{
-	font-family: 'Barlow Semi Condensed', sans-serif !important;
+	font-family: 'Open Sans', sans-serif; !important;
 	padding : 0em 1.4em;
 	}
 .flex{
@@ -55,12 +57,12 @@ background-color: white;
 
 .fontBr
 {
-	font-weight:500;
+	font-weight:600;
 }
 
 .h3
 {
-	font-size:18px; font-weight:300; 
+	font-size:18px; font-weight:400; 
 }
 
 
@@ -75,7 +77,7 @@ body
 .bodyWrapper
 {
 	text-align: left;
-	font-size:18px;
+	font-size:20px;
 	line-height: 170%;
 
 }
@@ -88,7 +90,7 @@ body
 
 .subHeader
 {
-	font-size:18px;
+	font-size:16px;
 	margin:6px 0px 3px 0px;
 }
 
