--- a/pf2.css
+++ b/pf2.css
@@ -62,10 +62,13 @@ background-color: white;
 
 .h3
 {
-	font-size:16px; font-weight:400; 
+	font-size:16px; font-weight:400;
 }
 
-
+.h2
+{
+	font-size:13px; font-weight:400; 
+}
 
 body
 {
@@ -108,13 +111,13 @@ a
 {
 	color:black;
 	text-decoration:none;
-	
+
 }
 
 button{
 
 	text-decoration: underline;
-	
+
 }
 
 @media screen and (max-width: 480px) {
@@ -122,7 +125,7 @@ button{
         font-size:17px;
         line-height:160%;
 
-        
+
     }
 
     div{
@@ -133,6 +136,3 @@ button{
 
 
 }
-
-
-
